tests/errors/syn1.kt
fun main { // Missing parentheses
    println("Hello, World!")
}